fix: allow wallet address input in Swagger
