# swagger/swagger.yaml
@@ -2,8 +2,6 @@ openapi: 3.0.0
 info:
   title: GO DAO
   version: 1.0.0
-security:
-  - BearerAuth: []
 paths:
   /dao-team-vote-results:
     get:
@@ -11,6 +9,13 @@ paths:
       description: Подводит итоги голосования по кошельку DAO.
       tags:
         - DAO Team Votes
+      parameters:
+        - in: query
+          name: wallet_address
+          schema:
+            type: string
+          required: true
+          description: Адрес кошелька DAO
       responses:
         '200':
           description: Список результатов голосования
@@ -246,8 +251,11 @@ paths:
   /auth/me:
     get:
       summary: Получить информацию о текущем пользователе
-      description: |
-        Получение информации о текущем пользователе. **Требуется авторизация.** Пример заголовка авторизации: ``` Authorization: Bearer {token} ```
+      description: >
+        Получение информации о текущем пользователе. **Требуется авторизация.** Пример заголовка авторизации:
+        ```
+        Authorization: Bearer {token}
+        ```
       tags:
         - Authentication
       parameters:
@@ -306,7 +314,7 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: Withdrawal successful
+                    example: "Withdrawal successful"
         '400':
           description: Неверный запрос
           content:
@@ -351,14 +359,14 @@ components:
         vote_power:
           type: integer
         hash:
-          type: string
+          type: string # Добавлено поле для хэша транзакции
     DAOTeamVoteResultsResponse:
       type: object
       properties:
         dao_members:
           type: integer
         trx_count:
-          type: integer
+          type: integer # Обновлено: Замена поля voted_members на trx_count
         turnout:
           type: string
         votes_for:
@@ -388,9 +396,7 @@ components:
           type: string
         choice:
           type: string
-          enum:
-            - За
-            - Против
+          enum: ["За", "Против"]
         vote_power:
           type: integer
         wallet_address:
@@ -406,22 +412,20 @@ components:
       properties:
         title:
           type: string
-          example: Sample Title
+          example: "Sample Title"
         subtitle:
           type: string
-          example: Sample Subtitle
+          example: "Sample Subtitle"
         description:
           type: string
-          example: Sample Description
+          example: "Sample Description"
         voter:
           type: string
-          example: d0
+          example: "d0"
         choice:
           type: string
-          enum:
-            - За
-            - Против
-          example: За
+          enum: ["За", "Против"]
+          example: "За"
     UserVote:
       type: object
       properties:
@@ -433,9 +437,7 @@ components:
           type: string
         choice:
           type: string
-          enum:
-            - За
-            - Против
+          enum: ["За", "Против"]
         vote_power:
           type: integer
     UserVoteInput:
@@ -446,13 +448,11 @@ components:
       properties:
         voter:
           type: string
-          example: d0...
+          example: "d0..."
         choice:
           type: string
-          enum:
-            - За
-            - Против
-          example: За
+          enum: ["За", "Против"]
+          example: "За"
     AuthRequest:
       type: object
       properties:
@@ -553,3 +553,5 @@ components:
           format: float
         address:
           type: string
+security:
+  - BearerAuth: []
